Regression: multi-word symbols reveal probability calculation flaws in SAPI Speech Recognizer
- added Rule precondition to check [0,1] value range of probability
- re-symbolizing to single-word symbols after slicing
-> fixed calculation of probability on word count
-> This in turn fixes the affected SAPI Speech Recognition unit tests
+ changed some of those tests, since multi-word symbols changed the
slice results slightly
+ Updated SliceTest to assert single-word-symbols